them meController